--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 	confidentialtime = {~~}}
 
 \BUPTthesisentitlepage{%
-	title = {A \LaTeX~TEMPLATE FOR PH.D. DISSERTATION OF BUPT},
+	title = {A \LaTeX~TEMPLATE FOR PHD DISSERTATION OF BUPT},
 	desc = {A DISSERTATION\\SUBMITTED TO THE FACULTY OF THE GRADUATE\\SCHOOL OF BEIJING UNIVERSITY OF POSTS AND\\TELECOMMUNICATIONS},
 	name = {BY\\DOCTOR},
 	supervisor = {PROF. SOMEONE, PH.D. ADVISOR},
@@ -37,7 +37,9 @@
 %\include{Chapter/Chapter_nomenclature}
 %
 \mainmatter
-\include{Chapter/Chapter_Introduction}
+\include{Chapter/Chapter_introduction}
+\include{Chapter/Chapter_architecture}
+\include{Chapter/Chapter_algorithm}
 \bibliography{Bib/thesis}
 
 \backmatter
