--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[phd, macos]{buptthesis}
 
 \BUPTthesiscntitlepage{%
-	title = {北京邮电大学\\博士论文\LaTeX 模板},
+	title = {北京邮电大学\&博士论文\LaTeX 模板},
 	studentid = {2019},
 	name = {博\quad 士},
 	major = {信息与通信工程},
@@ -26,25 +26,24 @@
 \clearpage
 \makestatement
 \makeenglishtitle
-%
+
 \frontmatter
 \include{Chapter/Chapter_cnabstract}
 \include{Chapter/Chapter_enabstract}
 \tableofcontents
 \listoffigures
 \listoftables
-%%
 %\include{Chapter/Chapter_nomenclature}
-%
+
 \mainmatter
 \include{Chapter/Chapter_introduction}
-\include{Chapter/Chapter_architecture}
-\include{Chapter/Chapter_algorithm}
-\bibliography{Bib/thesis}
+%\include{Chapter/Chapter_architecture}
+%\include{Chapter/Chapter_algorithm}
+%\bibliography{Bib/thesis}
 
-\backmatter
-\include{Chapter/Chapter_abbreviation}
-\include{Chapter/Chapter_acknowledgement}
-\include{Chapter/Chapter_publication}
+%\backmatter
+%\include{Chapter/Chapter_abbreviation}
+%\include{Chapter/Chapter_acknowledgement}
+%\include{Chapter/Chapter_publication}
 
- \end{document}
+\end{document}
