add instruction to citation

--- a/Bib/thesis.bib
+++ b/Bib/thesis.bib
@@ -13,3 +13,12 @@
 	month={Feb},
 	url={https://arxiv.org/abs/1509.02971},
 }
+
+@standard{gbt7714,
+	author={中华人民共和国国家质量监督检疫总局 and 中国国家标准化管理委员会},
+	title={信息与文献  参考文献著录规则：GB/T 7714—2015},
+	year={2015},
+	month={5},
+	address={北京},
+	publisher={中国标准出版社},
+}
