--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,11 @@
 \documentclass[phd]{buptthesis}
 
 \BUPTthesiscntitlepage{%
-	title = {北京邮电大学 \\ 博士、硕士论文\LaTeX 模板 \\ 信通院$ \text{IC}^\text{2} $ Laboratory},
+	title = {北京邮电大学 \\ 博士论文\LaTeX 模板 \\ 信通院$ \text{IC}^\text{2} $ Laboratory},
 	studentid = {2019},
-	name = {简单男孩},
+	name = {魏\quad \quad 何},
 	major = {信息与通信工程},
-	supervisor = {香\quad \quad 农},
+	supervisor = {茹\quad \quad 果},
 	institute = {信息与通信工程学院},
 	degreetype = {工学}}
 
